--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -223,9 +223,9 @@ html {
     left: 10%;
   -webkit-transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
   -webkit-overflow-scrolling: touch;
-  background-color: #a43f49;
+  background-color: #5a6ac5;
   box-sizing: border-box;
-  height: 100vh;  
+  height: calc(100vh - 40px);  
   max-height: 100vh !important;
   max-width: 80vw !important;
   min-width: 45px !important;
@@ -238,6 +238,9 @@ html {
   width: 20%;
   will-change: transform;
   z-index: 9999 !important;
+
+  margin: 20px;
+  box-shadow: 3px 3px 10px;
 }
 
 .menu-toggle {
